Simplify getVisiblePages() and fix searching in presentation mode

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -75,7 +75,6 @@ select {
   cursor: none;
 }
 
-
 :-webkit-full-screen .page {
   margin-bottom: 100%;
 }
@@ -100,7 +99,20 @@ select {
   display: none;
 }
 
-#viewerContainer.presentationControls {
+:-webkit-full-screen .textLayer > div {
+  cursor: none;
+}
+
+:-moz-full-screen .textLayer > div {
+  cursor: none;
+}
+
+:fullscreen .textLayer > div {
+  cursor: none;
+}
+
+#viewerContainer.presentationControls,
+#viewerContainer.presentationControls .textLayer > div {
   cursor: default;
 }
 
